# rope-survival

./: .gitignore  CMakeLists.txt
shaders/: triangle.frag  triangle.vert
src/: buffer_structures.hpp  main.cpp
src/helpers/: buffers_helper.cpp  camera_helper.cpp  context_helper.cpp  context_helper.hpp  helpers_common.hpp  impl_defines.hpp  model_loader.cpp  model_loader.hpp  shader_helper.cpp  shader_helper.hpp  texture_helper.cpp  texture_helper.hpp
